<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>effort_controllers</name>
  <version>0.19.0</version>
  <description>effort_controllers</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author>Vijay Pradeep</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>

  <build_depend>angles</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>forward_command_controller</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>forward_command_controller</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <test_depend>rostest</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>joint_state_controller</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/effort_controllers_plugins.xml"/>
  </export>
</package>
