<package>
  <name>forward_command_controller</name>
  <version>0.11.1</version>
  <description>forward_command_controller</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author>Vijay Pradeep</author>
  <author>Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend> 
  <build_depend>hardware_interface</build_depend> 
  <build_depend>std_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <run_depend>controller_interface</run_depend> 
  <run_depend>hardware_interface</run_depend> 
  <run_depend>std_msgs</run_depend> 
  <run_depend>realtime_tools</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
  </export>
</package>
