<package format="2">
  <name>forward_command_controller</name>
  <version>0.17.0</version>
  <description>forward_command_controller</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author>Vijay Pradeep</author>
  <author>Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend> 
  <depend>hardware_interface</depend> 
  <depend>std_msgs</depend> 
  <depend>realtime_tools</depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
  </export>
</package>
