<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gripper_action_controller</name>
  <version>0.18.0</version>
  <description>The gripper_action_controller package</description>

  <license>BSD</license>

  <maintainer email="robot.moveit@gmail.com">Sachin Chitta</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <author email="robot.moveit@gmail.com">Sachin Chitta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>controller_interface</depend>
  <depend>control_toolbox</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>

  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>

  <export>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
  </export>
</package>
