<?xml version="1.0"?>
<package format="2">
  <name>gripper_action_controller</name>
  <version>0.17.3</version>
  <description>The gripper_action_controller package</description>
  <maintainer email="robot.moveit@gmail.com">Sachin Chitta</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <author email="robot.moveit@gmail.com">Sachin Chitta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>angles</depend>
  <depend>cmake_modules</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>pluginlib</depend>

  <export>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
  </export>
</package>
